--- a/brainware-web/Dockerfile
+++ b/brainware-web/Dockerfile
@@ -64,6 +64,7 @@ RUN chown nextjs:nodejs db
 COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 COPY --from=builder --chown=nextjs:nodejs /app/prisma ./prisma
+COPY --from=builder --chown=nextjs:nodejs /app/prisma/schema.prisma ./prisma/schema.prisma
 
 USER nextjs
 
