--- a/brainware-web/Dockerfile
+++ b/brainware-web/Dockerfile
@@ -46,6 +46,7 @@ ENV NODE_ENV=production
 
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
+RUN apk add --no-cache openssl
 
 COPY --from=builder /app/public ./public
 
